test-fixtures/namespace_w_spec.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    certmanager.k8s.io/disable-validation: "true"
spec:
  finalizers: ["foo"]
