test-fixtures/basicDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baz-app
  namespace: bat
  annotations:
    foo: fam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        foo: fam
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          args: ["--debug", "--test"]
          ports:
            - port: 80
              containerPort: 80
          resources:
            requests:
              cpu: "1"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
