test-fixtures/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    test: MyExampleApp
  name: terraform-example
  namespace: something
spec:
  selector:
    matchLabels:
      test: MyExampleApp
  template:
    metadata:
      labels:
        test: MyExampleApp
    spec:
      containers:
        - image: nginx:1.7.8
          name: example

          resources:
            limits:
              cpu: "0.5"
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 50Mi
