test-fixtures/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    alpha.istio.io/kubernetes-serviceaccounts: default
  name: backend
  namespace: default
subsets:
  - addresses:
      - ip: 10.128.0.17
    ports:
      - name: http-backend
        port: 8080
        protocol: TCP
  - notReadyAddresses:
      - ip: 10.128.0.11
    ports:
      - name: http-backend
        protocol: TCP
        port: 8080
