test-fixtures/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      name: web
  clusterIP: None
  externalIPs: ["192.168.10.2"]
  selector:
    app: nginx
