test-fixtures/ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  rules:
    - host: echo.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo-server
                port:
                  number: 8080

          - pathType: Prefix
            path: "/.ws"
            backend:
              service:
                name: echo-server-http
                port:
                  name: http
  tls:
    - hosts:
        - echo.example.com
